# Modern-Note-Taking-

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  release_version.sh
