[project]
name = "note-taking-app"
version = "0.1.0"
description = "A simple note taking app written in python and compiled using the pyinstaller for windows support."
authors = [
    {name = "Yash Chauhan",email = "yashc9411407582@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff (>=0.11.13,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
